--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "author": "theme",
   "license": "ISC",
   "devDependencies": {
-    "three": "^0.71.1"
+    "http-server-cli": "> 0.8.5"
   }
 }
