--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "author": "theme",
   "license": "ISC",
   "devDependencies": {
-    "http-server-cli": "> 0.8.5"
+    "coffee-script": "^1.10.0",
+    "gulp": "^3.9.1",
+    "gulp-cache": "^0.4.3",
+    "gulp-coffee": "^2.3.1",
+    "gulp-coffeelint": "^0.6.0",
+    "gulp-util": "^3.0.7"
   }
 }
