--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-cache": "^0.4.3",
     "gulp-coffee": "^2.3.1",
     "gulp-coffeelint": "^0.6.0",
+    "gulp-directory-sync": "^1.2.3",
     "gulp-util": "^3.0.7"
   }
 }
