--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "coffee-script": "^1.10.0",
-    "gulp": "^3.9.1",
-    "gulp-cache": "^0.4.3",
-    "gulp-coffee": "^2.3.1",
-    "gulp-coffeelint": "^0.6.0",
-    "gulp-directory-sync": "^1.2.3",
-    "gulp-util": "^3.0.7"
+    "grunt": "^0.4.5",
+    "grunt-contrib-coffee": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-sync": "^0.5.2"
   }
 }
