--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "coffee-script": "^1.10.0",
     "grunt": "^0.4.5",
     "grunt-contrib-coffee": "^1.0.0",
+    "grunt-contrib-jade": "^1.0.0",
+    "grunt-contrib-less": "^1.2.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-sync": "^0.5.2"
   }
